force-app/main/default/objects/User/fields/Accepted_Community_Terms__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Community_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Community Terms</label>
    <type>Checkbox</type>
</CustomField>