force-app/main/default/objects/User/fields/ARC_User_Type__c.field-meta.xml
<CustomField>
    <fullName>ARC_User_Type__c</fullName>
    <label>ARC User Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Division Scheduler</fullName>
            </value>
            <value>
                <fullName>Secondary Scheduler</fullName>
            </value>
            <value>
                <fullName>Read Only Scheduler</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>