force-app/main/default/objects/User/fields/Chat_Name__c.field-meta.xml
<CustomField>
    <fullName>Chat_Name__c</fullName>
    <label>Chat Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>