force-app/main/default/objects/User/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <description>Date user was deactivated</description>
    <inlineHelpText>This field is automatically filled out based on the date the &#39;Active&#39; box is unchecked.</inlineHelpText>
    <label>Deactivated Date</label>
    <type>Date</type>
</CustomField>