force-app/main/default/objects/User/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Community User Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deactivation_Reason</valueSetName>
    </valueSet>
</CustomField>