force-app/main/default/objects/User/fields/Is_Appinium_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Is_Appinium_Instructor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked once an Appinium Instructor Record is created via flow</description>
    <label>Is Appinium Instructor</label>
    <type>Checkbox</type>
</CustomField>