force-app/main/default/objects/User/fields/LMS_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_ID__c</fullName>
    <description>This field is the LMS Id of the user if user exists on LMS system</description>
    <label>LMS ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>