force-app/main/default/objects/User/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>Formula is used to display the Manager Name optionally in reports. Salesforce out of box reports do not allow reporting on the Manager Name.</description>
    <formula>Manager.FirstName &amp; &#39; &#39; &amp; Manager.LastName</formula>
    <inlineHelpText>Formula is used to display the Manager Name optionally in reports. Salesforce out of box reports do not allow reporting on the Manager Name.</inlineHelpText>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>