force-app/main/default/objects/User/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <description>This is a temporary field used to reconcile users between the training and production environments.  This field should be deleted after all initial users are reconciled and loaded into production.</description>
    <inlineHelpText>This is a temporary field used to reconcile users between the training and production environments.  This field should be deleted after all initial users are reconciled and loaded into production.</inlineHelpText>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Training Only</fullName>
            </value>
            <value>
                <fullName>Prod Only</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>