force-app/main/default/objects/User/fields/PHSS_IC_Email__c.field-meta.xml
<CustomField>
    <fullName>PHSS_IC_Email__c</fullName>
    <formula>IF(  Id = $User.Id ,
     Email, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>