force-app/main/default/objects/User/fields/PHSS_IC_Name__c.field-meta.xml
<CustomField>
    <fullName>PHSS_IC_Name__c</fullName>
    <formula>IF( Id = $User.Id , 
FirstName &amp; &quot; &quot; &amp; LastName, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>