force-app/main/default/objects/User/fields/PHSS_IC_Username__c.field-meta.xml
<CustomField>
    <fullName>PHSS_IC_Username__c</fullName>
    <formula>IF( Id = $User.Id , 
Username, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username</label>
    <type>Text</type>
</CustomField>