force-app/main/default/objects/User/fields/Real_Email__c.field-meta.xml
<CustomField>
    <fullName>Real_Email__c</fullName>
    <description>Real email address of user. Derived by removing the extra environment suffix from their username.  Delete after all initial users are loaded into the environment with their correct emails.</description>
    <formula>SUBSTITUTE( Username, &#39;.phss&#39;, &#39;&#39;)</formula>
    <inlineHelpText>Real email address of user. Derived by removing the extra environment suffix from their username.  Delete after all initial users are loaded into the environment with their correct emails.</inlineHelpText>
    <label>Real Email</label>
    <type>Text</type>
</CustomField>