force-app/main/default/objects/User/fields/SABA_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>SABA_Internal_ID__c</fullName>
    <externalId>true</externalId>
    <label>SABA Internal ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>