force-app/main/default/objects/User/fields/Send_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to resend welcome email</description>
    <label>Send Welcome Email</label>
    <type>Checkbox</type>
</CustomField>